--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,24 @@
 <html lang="en">
-<head>
-    <meta charSet="utf-8"/>
-    <meta name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta name="theme-color" content="#000000"/>
-    <title>Avtale om arbeidstrening</title>
-    {{{NAV_SCRIPTS}}} {{{NAV_MENU_RESOURCES}}} {{{NAV_STYLES}}}
-</head>
-<body>
-<noscript>
-    You need to enable JavaScript to run this app.
-</noscript>
-{{{NAV_HEADING}}}
-<div id="Tiltak"></div>
-<div id="root" className="tiltaksgjennomforing"></div>
-{{{NAV_FOOTER}}}
+    <head>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
+        <meta name="theme-color" content="#000000" />
+        <title>Avtale om arbeidstrening</title>
+        {{{NAV_SCRIPTS}}} {{{NAV_MENU_RESOURCES}}} {{{NAV_STYLES}}}
+    </head>
+    <body>
+        <noscript> You need to enable JavaScript to run this app. </noscript>
+        {{{NAV_HEADING}}}
+        <div id="Tiltak"></div>
+        <div id="root" className="tiltaksgjennomforing"></div>
+        {{{NAV_FOOTER}}}
 
-<script id="sr1" src="/bundle.js"></script>
-<script id="sr2" src="/static/js/0.chunk.js"></script>
-<script id="sr3" src="/static/js/1.chunk.js"></script>
-<script id="sr4" src="/static/js/main.chunk.js"></script>
-
-</body>
-
+        <script id="sr1" src="/bundle.js"></script>
+        <script id="sr2" src="/static/js/0.chunk.js"></script>
+        <script id="sr3" src="/static/js/1.chunk.js"></script>
+        <script id="sr4" src="/static/js/main.chunk.js"></script>
+    </body>
 </html>
