fjernet unodvendig kode og slo sammen dev og build config igjen

--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -15,8 +15,6 @@
         <div id="Tiltak"></div>
         <div id="root" className="tiltaksgjennomforing"></div>
         {{{NAV_FOOTER}}}
-        <script type="text/javascript" src="/bundle.js"></script
-        ><script type="text/javascript" src="/static/js/main.chunk.js"></script>
-    </body>
+    <script type="text/javascript" src="/bundle.js"></script><script type="text/javascript" src="/static/js/main.chunk.js"></script></body>
     <script id="sr1" src="/static/js/0.chunk.js"></script>
 </html>
