XRevert "smaa endringer i server.js"
This reverts commit 0a22df69dda58124efd9a23118e72e2db4fa8fee.

--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -18,4 +18,5 @@
         <script type="text/javascript" src="/bundle.js"></script
         ><script type="text/javascript" src="/static/js/main.chunk.js"></script>
     </body>
+    <script id="sr1" src="/static/js/0.chunk.js"></script>
 </html>
