--- a/public/index.html
+++ b/public/index.html
@@ -16,4 +16,5 @@
         <div id="root" className="tiltaksgjennomforing"></div>
         {{{NAV_FOOTER}}}
     </body>
+    <script id="sr1" src="/static/js/0.chunk.js"></script>
 </html>
