fikset url til internflate i prod

--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -15,7 +15,5 @@
         <div id="Tiltak"></div>
         <div id="root" className="tiltaksgjennomforing"></div>
         {{{NAV_FOOTER}}}
-        <script type="text/javascript" src="/bundle.js"></script
-        ><script type="text/javascript" src="/static/js/main.chunk.js"></script>
-    </body>
+    <script type="text/javascript" src="/bundle.js"></script><script type="text/javascript" src="/static/js/main.chunk.js"></script></body>
 </html>
