--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -15,7 +15,9 @@
         <div id="Tiltak"></div>
         <div id="root" className="tiltaksgjennomforing"></div>
         {{{NAV_FOOTER}}}
-    <script type="text/javascript" src="/bundle.js"></script><script type="text/javascript" src="/static/js/main.chunk.js"></script></body>
+        <script type="text/javascript" src="/bundle.js"></script
+        ><script type="text/javascript" src="/static/js/main.chunk.js"></script>
+    </body>
     <script id="sr1" src="/static/js/0.chunk.js"></script>
     <script id="sr2" src="/static/js/1.chunk.js"></script>
 </html>
