lagt til ekstern dekorator paa dev-server, dev-sbs og sbs

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,12 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
+
+        <title><%=htmlWebpackPlugin.options.title %></title>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
         <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
-
+        <div><%=htmlWebpackPlugin.options.styles %></div>
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -65,6 +67,8 @@
     </head>
 
     <body>
+        <div><%=htmlWebpackPlugin.options.headerWithmenu %></div>
+        <div><%=htmlWebpackPlugin.options.megamenuResources %></div>
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
@@ -79,5 +83,7 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
+        <div><%=htmlWebpackPlugin.options.footerWithmenu %></div>
+        <div><%=htmlWebpackPlugin.options.scripts %></div>
     </body>
 </html>
