--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
         <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
-        <div><%=htmlWebpackPlugin.options.styles %></div>
+        <div id="styles"><%=htmlWebpackPlugin.options.styles %></div>
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -67,8 +67,8 @@
     </head>
 
     <body>
-        <div><%=htmlWebpackPlugin.options.headerWithmenu %></div>
-        <div><%=htmlWebpackPlugin.options.megamenuResources %></div>
+        <div id="headerWithmenu"><%=htmlWebpackPlugin.options.headerWithmenu %></div>
+        <div id="megamenuResources"><%=htmlWebpackPlugin.options.megamenuResources %></div>
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
@@ -83,7 +83,7 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
-        <div><%=htmlWebpackPlugin.options.footerWithmenu %></div>
-        <div><%=htmlWebpackPlugin.options.scripts %></div>
+        <div id="footerWithmenu"><%=htmlWebpackPlugin.options.footerWithmenu %></div>
+        <div id="scripts"><%=htmlWebpackPlugin.options.scripts %></div>
     </body>
 </html>
