lagt til interflate-dekorator som plugin til dev, og i server til dev|prod

--- a/public/dev/index.html
+++ b/public/dev/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="theme-color" content="#000000" />
         <!--
       manifest.json provides metadata used when your web app is added to the
@@ -39,12 +36,7 @@
                 r.async = 1;
                 r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
                 a.appendChild(r);
-            })(
-                window,
-                document,
-                'https://static.hotjar.com/c/hotjar-',
-                '.js?sv='
-            );
+            })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
         </script>
 
         <!-- Google Tag Manager -->
@@ -81,7 +73,7 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
-        <script type="text/javascript" src="/bundle.js"></script
-        ><script type="text/javascript" src="/static/js/main.chunk.js"></script>
+        <script type="text/javascript" src="/bundle.js"></script>
+        <script type="text/javascript" src="/static/js/main.chunk.js"></script>
     </body>
 </html>
