lagt til ekstern dekorator paa dev-server, dev-sbs og sbs  (#255)
* lagt til ekstern dekorator paa dev-server, dev-sbs og sbs

* lagt til baseline menyen som backup naar fetch av gamle menyen failer

* lagt til dekorator url i sbs-prod og fjernet uppercase i funksjonsnavn i plugin

* fikset camelcase pa funksjonsnavn i filen og fjernet ekstra mellomrom i yaml fil

* forandret litt paa visningslogikken til Innloggingslinje.tsx

* la til type-setting paa return verdier til funksjoner

* satt presidens paa appen in body styling, som overstyrer dekorator styling

* lagt til server fetch av dekorator, med caching, ryddet opp i tidligere endringer

* satt title paa dokumentet til aa vaere statisk

* fjernet unodvendig console logging fra server

* oppdatert dockerfile med pakke

* lagt til pakker i dockerfile og fjernet pakke som ikke blir brukt

* forandret litt paa sjekk om backup menyen skal brukes, lagt til versjon i dockerfile

* juster plassering av dekoratør tags i template-fil

Co-authored-by: Bendik Ibenholt <benibe88@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,14 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
+
+        <title>Tiltaksgjennomføring</title>
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
         <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
-
+        <div id="scripts"><%=htmlWebpackPlugin.options.scripts %></div>
+        <div id="megamenuResources"><%=htmlWebpackPlugin.options.megamenuResources %></div>
+        <div id="styles"><%=htmlWebpackPlugin.options.styles %></div>
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -65,6 +69,8 @@
     </head>
 
     <body>
+        <div id="headerWithmenu"><%=htmlWebpackPlugin.options.headerWithmenu %></div>
+
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
@@ -79,5 +85,6 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
+        <div id="footerWithmenu"><%=htmlWebpackPlugin.options.footerWithmenu %></div>
     </body>
 </html>
