Sletter webpack plugin. Gjør heller meny-injisering i headerFooterDecorator.js, som kalles fra setupProxy.js, slik at både npm start og npm run server gjøres dekorering på samme måte.

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
         <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
-        <div id="scripts"><%=htmlWebpackPlugin.options.scripts %></div>
-        <div id="megamenuResources"><%=htmlWebpackPlugin.options.megamenuResources %></div>
-        <div id="styles"><%=htmlWebpackPlugin.options.styles %></div>
+        <div id="scripts"></div>
+        <div id="megamenuResources"></div>
+        <div id="styles"></div>
         <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -69,7 +69,7 @@
     </head>
 
     <body>
-        <div id="headerWithmenu"><%=htmlWebpackPlugin.options.headerWithmenu %></div>
+        <div id="headerWithmenu"></div>
 
         <noscript>
             You need to enable JavaScript to run this app.
@@ -85,6 +85,6 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
-        <div id="footerWithmenu"><%=htmlWebpackPlugin.options.footerWithmenu %></div>
+        <div id="footerWithmenu"></div>
     </body>
 </html>
