--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
         <noscript>
             You need to enable JavaScript to run this app.
         </noscript>
-        <div id="root" class="tiltaksgjennomforing"></div>
+        <div id="root" aria-live="polite" class="tiltaksgjennomforing"></div>
         <div id="footerWithmenu"><%=htmlWebpackPlugin.options.footerWithmenu %></div>
         <!--
   This HTML file is a template.
