--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
     </head>
 
     <body>
+        <div>Test run init</div>
         <div id="headerWithmenu"><%=htmlWebpackPlugin.options.headerWithmenu %></div>
 
         <noscript>
